[package]
name = "multiobjectivepathfinding"
version = "0.1.0"
authors = ["alex <alex.gusain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.2"
ncollide2d = "0.22.0"
nalgebra = "0.20.0"
pathfinding = "2.0.4"